--- a/vercel.json
+++ b/vercel.json
@@ -2,16 +2,76 @@
   "version": 2,
   "rewrites": [
     {
-      "source": "/api/:path*",
-      "destination": "/api/:path*"
+      "source": "/api/track/visit",
+      "destination": "/api/track.js?action=visit"
+    },
+    {
+      "source": "/api/track/click",
+      "destination": "/api/track.js?action=click"
+    },
+    {
+      "source": "/api/track/lead",
+      "destination": "/api/track.js?action=lead"
+    },
+    {
+      "source": "/api/stats/dashboard-summary",
+      "destination": "/api/stats.js?action=dashboard-summary"
+    },
+    {
+      "source": "/api/stats/history",
+      "destination": "/api/stats.js?action=history"
+    },
+    {
+      "source": "/api/stats/download-leads",
+      "destination": "/api/stats.js?action=download-leads"
+    },
+    {
+      "source": "/api/traffic/go",
+      "destination": "/api/traffic.js?action=go"
+    },
+    {
+      "source": "/api/traffic/monitor",
+      "destination": "/api/traffic.js?action=monitor"
+    },
+    {
+      "source": "/api/variant/propose",
+      "destination": "/api/engine.js?action=propose"
+    },
+    {
+      "source": "/api/variant/list",
+      "destination": "/api/engine.js?action=list"
+    },
+    {
+      "source": "/api/variant/get",
+      "destination": "/api/engine.js?action=get"
+    },
+    {
+      "source": "/api/variant/status",
+      "destination": "/api/engine.js?action=status"
+    },
+    {
+      "source": "/api/variant/analyze",
+      "destination": "/api/engine.js?action=analyze"
+    },
+    {
+      "source": "/api/variant/apply-weights",
+      "destination": "/api/engine.js?action=apply-weights"
+    },
+    {
+      "source": "/api/ai/forecast",
+      "destination": "/api/engine.js?action=forecast"
+    },
+    {
+      "source": "/api/ai/analyze",
+      "destination": "/api/engine.js?action=ai-analyze"
     },
     {
       "source": "/",
       "destination": "/public/index.html"
     },
     {
-      "source": "/:path*",
-      "destination": "/public/:path*"
+      "source": "/(.*)",
+      "destination": "/public/$1"
     }
   ]
 }
