Fix: Remove builds config to enable automatic API detection

--- a/vercel.json
+++ b/vercel.json
@@ -1,83 +1,3 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "api/**/*.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "*.html",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/track/visit",
-      "dest": "/api/track.js?action=visit"
-    },
-    {
-      "src": "/api/track/click",
-      "dest": "/api/track.js?action=click"
-    },
-    {
-      "src": "/api/track/lead",
-      "dest": "/api/track.js?action=lead"
-    },
-    {
-      "src": "/api/stats/dashboard-summary",
-      "dest": "/api/stats.js?action=dashboard-summary"
-    },
-    {
-      "src": "/api/stats/history",
-      "dest": "/api/stats.js?action=history"
-    },
-    {
-      "src": "/api/stats/download-leads",
-      "dest": "/api/stats.js?action=download-leads"
-    },
-    {
-      "src": "/api/traffic/go",
-      "dest": "/api/traffic.js?action=go"
-    },
-    {
-      "src": "/api/traffic/monitor",
-      "dest": "/api/traffic.js?action=monitor"
-    },
-    {
-      "src": "/api/variant/propose",
-      "dest": "/api/engine.js?action=propose"
-    },
-    {
-      "src": "/api/variant/list",
-      "dest": "/api/engine.js?action=list"
-    },
-    {
-      "src": "/api/variant/get",
-      "dest": "/api/engine.js?action=get"
-    },
-    {
-      "src": "/api/variant/status",
-      "dest": "/api/engine.js?action=status"
-    },
-    {
-      "src": "/api/variant/analyze",
-      "dest": "/api/engine.js?action=analyze"
-    },
-    {
-      "src": "/api/variant/apply-weights",
-      "dest": "/api/engine.js?action=apply-weights"
-    },
-    {
-      "src": "/api/ai/forecast",
-      "dest": "/api/engine.js?action=forecast"
-    },
-    {
-      "src": "/api/ai/analyze",
-      "dest": "/api/engine.js?action=ai-analyze"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
-    }
-  ]
+  "version": 2
 }
