feat: upgrade to AI V5 (Budget Gates, Zone/Creative Ops)

--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,8 @@
 {
-  "name": "betting-api",
+  "type": "module",
+  "scripts": {
+    "start": "node start-system.js"
+  },
   "dependencies": {
     "@supabase/supabase-js": "^2.91.0"
   }
