--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "chalk": "^4.1.2",
     "cron": "^4.4.0",
     "dotenv": "^17.2.4",
-    "openai": "^6.18.0"
+    "openai": "^6.18.0",
+    "@supabase/supabase-js": "^2.39.0"
   }
 }
