--- a/package.json
+++ b/package.json
@@ -1,11 +1,39 @@
 {
+  "name": "betting-propeller-dashboard",
+  "version": "1.0.0",
+  "private": true,
   "type": "module",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "eslint"
+  },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.0",
+    "@types/recharts": "^1.8.29",
     "axios": "^1.13.4",
     "chalk": "^4.1.2",
+    "clsx": "^2.1.1",
     "cron": "^4.4.0",
     "dotenv": "^17.2.4",
+    "framer-motion": "^12.33.0",
+    "lucide-react": "^0.563.0",
+    "next": "16.1.6",
     "openai": "^6.18.0",
-    "@supabase/supabase-js": "^2.39.0"
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "recharts": "^3.7.0",
+    "tailwind-merge": "^3.4.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "16.1.6",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
