Complete replacement with working PropellerAds dashboard

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,8 @@
-# PROPELLER ADS
-PROPELLER_API_KEY=
-PROPELLER_API_SECRET= // If needed, usually Token is enough for Read/Write
+# PropellerAds API
+PROPELLER_API_KEY=your_propellerads_api_key_here
 
-# OPENAI (The Brain)
-OPENAI_API_KEY=
+# Landing Page API (will be the Vercel URL of betting-landing)
+NEXT_PUBLIC_LANDING_API_URL=https://betting-stanley-tech-code.vercel.app
 
-# SYSTEM SETTINGS
-CheckInterval=15
-TargetGeo=KE
-MinCTR=0.3
-ScaleCTR=1.5
+# App URL
+NEXT_PUBLIC_APP_URL=http://localhost:3000
