--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.95.3",
+    "@supabase/supabase-js": "^2.39.0",
     "@types/recharts": "^1.8.29",
     "clsx": "^2.1.1",
-    "dotenv": "^17.2.4",
-    "framer-motion": "^12.33.0",
-    "lucide-react": "^0.563.0",
-    "next": "16.1.6",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
-    "recharts": "^3.7.0",
-    "tailwind-merge": "^3.4.0"
+    "dotenv": "^16.3.1",
+    "framer-motion": "^10.16.4",
+    "lucide-react": "^0.294.0",
+    "next": "14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "recharts": "^2.10.3",
+    "tailwind-merge": "^2.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
