--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.3.1",
     "framer-motion": "^10.16.4",
+    "inter": "^2.1.0",
     "lucide-react": "^0.294.0",
     "next": "14.1.0",
     "react": "^18.2.0",
@@ -22,14 +23,14 @@
     "tailwind-merge": "^2.1.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
     "@types/node": "^20.11.17",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "autoprefixer": "^10.4.24",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
 }
