--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,17 +25,13 @@
       "@/*": [
         "./src/*"
       ]
-    },
-    "target": "es5"
+    }
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "**/*.js",
-    "**/*.mjs",
-    ".next/types/**/*.ts",
-    "next.config.mjs"
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
