--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,8 @@
 {
-  "framework": "nextjs"
+  "crons": [
+    {
+      "path": "/api/sync/propeller",
+      "schedule": "*/10 * * * *"
+    }
+  ]
 }
